chgmgmt_build/src/objects/TrainingProgram__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>自己学習</fullName>
                </value>
                <value>
                    <fullName>オンライントレーニング</fullName>
                </value>
                <value>
                    <fullName>店舗実地体験</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Due_Date__c</fullName>
        <label>期限日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>資料保存先</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProgramContents__c</fullName>
        <label>プログラム内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Due_Date__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>ターゲット</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>全従業員</fullName>
                </value>
                <value>
                    <fullName>ディレクター以上</fullName>
                </value>
                <value>
                    <fullName>マネージャー以上</fullName>
                </value>
                <value>
                    <fullName>新入社員</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>教育プログラム</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>教育プログラム名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>